# Any2M3U

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/any2m3u/: config.py  db.py  deps.py  main.py  models.py  scheduler.py  schemas.py  security.py
backend/any2m3u/api/: auth.py  public.py  rules.py  scan.py  sources.py  tokens.py
backend/any2m3u/m3u/: filters.py  renderer.py
backend/any2m3u/migrations/: 0001_init.sql  _runner.py
backend/any2m3u/proxy/: stream.py
backend/any2m3u/scanner/: base.py  engine.py  local.py  webdav.py
backend/any2m3u/utils/: dates.py
backend/tests/: conftest.py  test_auth.py  test_bootstrap.py  test_config.py  test_dates.py  test_db.py  test_filters.py  test_local_adapter.py  test_m3u.py  test_models.py  test_path_traversal.py  test_proxy.py  test_proxy_endpoint.py  test_public_api.py  test_scan_engine.py  test_scheduler.py  test_security.py  test_sources_api.py  test_tokens_api.py  test_webdav_adapter.py  test_webdav_real.py
deploy/: nginx.example.conf
docs/superpowers/plans/: 2026-06-11-any2m3u.md  2026-06-11-high-priority-fixes.md
docs/superpowers/specs/: 2026-06-11-any2m3u-design.md
frontend/: components.d.ts  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.vue  api.ts  main.ts  router.ts  styles.css  types.ts
frontend/src/components/: DiagnosePanel.vue  RuleForm.vue  ScanProgress.vue  SourceForm.vue
frontend/src/stores/: auth.ts
frontend/src/views/: Dashboard.vue  (+6 more)
